--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,27 @@
-<h2>Hello My People</h2>
+<div class="mainBody">
+    <div clas="container">
+<div class="mainHeader">
+<a [routerLink]="['/']" class="mainHeader">
+<h2 class="d-flex justify-content-center"> What-To-Eat?</h2>
+<h5 class="d-flex justify-content-center">Recipe Selection Portal</h5>
+</a>
+</div>
+
+<nav class="navbar navbar-expand-sm bg-light navbar-dark">
+<ul class="navbar-nav">
+    <li class="nav-item">
+        <button [routerLink]="['recipes']" class="m-1 btn btn-light btn-outline-primary" Button> Recipes </button>
+    </li>
+    <li class="nav-item">
+        <button [routerLink]="['about']" class="m-1 btn btn-light btn-outline-primary" Button> About </button>
+    </li>
+    <li class="nav-item right">
+        <button [routerLink]="['member']" class="m-1 btn btn-light btn-outline-primary" Button> Sign-In/Sign-Up </button>
+    </li>
+</ul>
+</nav>
+</div>
+
 
 <router-outlet></router-outlet>
+</div>
